fixed tags being covered by navbar (hopefully)

--- a/frontend/src/styles/marketplace-home.css
+++ b/frontend/src/styles/marketplace-home.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
-  padding-top: 70px;
+  padding-top: 100px;
 }
 
 .product-listings-wrapper {
